# agent-apm-python

./: .gitignore  MANIFEST.in  README.md  README.txt  dev-requirements.txt  generated.txt  notes  publish.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main-rc.yml  main.yml
CheckUtil/: CheckUtil.py  __init__.py
CheckUtil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apmpython/: __init__.py  apmpython.py  test.py
apmpython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apmpythonpackage/: __init__.py  apmpythonpackage.py
middleware/: __init__.py  config.py  config_test.py  distro.py  log.py  metrics.py  middleware.ini  options.py  profiler.py  resource.py  sampler.py  setup.py  trace.py  version.py
middleware/detectors/: aws.py  detector.py  env_vars.py
middleware/installer/: __init__.py  __main__.py  _bootstrap.py  run.py
middleware/lib/: _logger.py  _meter.py  _profiler.py  _tracer.py  mw_tracker.py
middleware/profiling/: __init__.py  lru_cache.py  profile_processor.py  profiler.py  surround_code.py
middleware/testfiles/: middleware_default.ini
mw_tracker/: __init__.py  _logger.py  _meter.py  mw_tracker.py
scripts/: middleware-apm.py
source/: _logger.py  _tracer.py  mw_tracker.py
src/: _meter.py
